Changes for 1.9

 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.3

 - [ZBX-2747] improved sql when save triggers (Vedmak)
 - [ZBX-2750] fixed undefined index when delete graph (Vedmak)
 - [ZBX-2742] fixed item deletion with postgre (Vedmak)
 - [ZBX-2738] fixed problems with ukrainian locales (Aly)
 - [ZBX-2740] fixed js errors in items section in IE (Aly)
	
Changes for 1.8.3rc1

 - [ZBX-2731] fixed permissions problem with hostgroup names containing '[]' (Vedmak)
 - [ZBX-2733] fixed the timer process so that it does not recalculate extraneous triggers for an item (asaveljevs)
 - [ZBX-2729] improved host-group and host filter selection (Aly)
 - [DEV-465] added messaging system (Aly)
 - [ZBX-2697] forbid creation of maintenance without hosts/groups (Vedmak)
 - [ZBX-2711] added links to host profile in dashboard "last 20 issues" host menu (Vedmak)
 - [ZBX-2719] fixed events delay for one minute in frontend (Vedmak)
 - [ZBX-2720] in actions conditions trigger host is now displayed (Vedmak)
 - [ZBX-2685] fixed map elements not always change position when coords are manually set (Vedmak)
 - [ZBX-2664] fixed viewed period and filter status reset in web monitoring (Vedmak)
 - [ZBX-2683] removed dead entries and added some translated strings for the Latvian translation (Richlv)
 - [ZBX-2682] added Czech translation; thanks to Jakub Kalas (Richlv)
 - [ZBX-2669] fixed not showing map label when background image is used (Vedmak)
 - [ZBXNEXT-436] added unacknwledged problem display for maps (Vedmak)
 - [ZBX-2561] refactored usergroups api, improved items deletion (Vedmak)
 - [ZBX-2634] fixed instability of Zabbix processes on Solaris due to them crashing in signal handlers (asaveljevs)